--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Go_ESIM - Internet in 1 Minute</title>
+  <title>Go_ESIM 🌍</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <meta property="og:image" content="og_image.png">
 </head>
 <body>
   <header>
@@ -15,23 +13,25 @@
   </header>
 
   <main>
-    <section id="what">
+    <section>
       <h2>❓ What is eSIM?</h2>
-      <p>🇬🇧 eSIM is a virtual SIM card — no plastic, installs in 1 minute, works in 200+ countries.<br>
-         🇷🇺 eSIM — виртуальная SIM-карта. Без пластика, установка за 1 минуту, работает в 200+ странах.</p>
+      <p>
+        🇬🇧 eSIM is a virtual SIM card — no plastic, installs in 1 minute, works in 200+ countries.<br>
+        🇷🇺 eSIM — виртуальная SIM-карта. Без пластика, установка за 1 минуту, работает в 200+ странах.
+      </p>
     </section>
 
-    <section id="how">
+    <section>
       <h2>🛒 How to Buy</h2>
       <ol>
         <li>Choose country & plan | Выбери страну и тариф</li>
         <li>Pay online 💳 | Оплати онлайн 💳</li>
-        <li>Receive QR by email 📩 | Получи QR на почту 📩</li>
+        <li>Receive QR by email ✉️ | Получи QR на почту ✉️</li>
       </ol>
-      <a class="cta" href="go.html?to=simoptions&utm_source=site&utm_medium=button&utm_campaign=main">Buy eSIM</a>
+      <a class="button" href="https://www.simoptions.com/?utm_medium=wpam_id_866" target="_blank">Buy eSIM</a>
     </section>
 
-    <section id="phones">
+    <section>
       <h2>📱 Supported Phones</h2>
       <ul>
         <li>iPhone XS and newer</li>
@@ -41,7 +41,7 @@
       </ul>
     </section>
 
-    <section id="channels">
+    <section>
       <h2>🔗 Channels & Communities</h2>
       <p>👉 <a href="https://t.me/Go_ESIM" target="_blank">Telegram: Go_ESIM</a></p>
     </section>
