--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
   <main>
     <section>
       <h2>❓ What is eSIM?</h2>
-      <p>
-        🇬🇧 eSIM is a virtual SIM card — no plastic, installs in 1 minute, works in 200+ countries.<br>
-        🇷🇺 eSIM — виртуальная SIM-карта. Без пластика, установка за 1 минуту, работает в 200+ странах.
-      </p>
+      <p>🇬🇧 eSIM is a virtual SIM card — no plastic, installs in 1 minute, works in 200+ countries.<br>
+         🇷🇺 eSIM — виртуальная SIM-карта. Без пластика, установка за 1 минуту, работает в 200+ странах.</p>
     </section>
 
     <section>
@@ -43,7 +41,7 @@
 
     <section>
       <h2>🔗 Channels & Communities</h2>
-      <p>👉 <a href="https://t.me/Go_ESIM" target="_blank">Telegram: Go_ESIM</a></p>
+      <p>👉 <a href="https://t.me/Go_ESIM">Telegram: Go_ESIM</a></p>
     </section>
   </main>
 
