--- a/index.html
+++ b/index.html
@@ -2,104 +2,147 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Купить eSIM 🌍 Интернет без роуминга для путешествий | Go_ESIM</title>
-  <meta name="description" content="Купи eSIM за 1 минуту. Интернет без роуминга в 200+ странах. Работает на iPhone, Samsung, Pixel. Идеально для туристов и digital nomads.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Go_ESIM 🌍 Интернет без роуминга</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Купить eSIM онлайн 🌍 Интернет без роуминга в 200+ странах. Подходит для туристов и digital nomads. Установка за 1 минуту.">
+
+  <!-- OG -->
+  <meta property="og:title" content="Go_ESIM 🌍 Интернет без роуминга">
+  <meta property="og:description" content="Купить eSIM онлайн для путешествий в 200+ странах. Быстрая установка, без пластика.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="favicon.ico">
+
   <link rel="icon" href="favicon.ico">
-  <link rel="canonical" href="https://esimhubglobal-wq.github.io/">
+  
   <style>
-    :root{--bg:#0f1216;--ink:#e7eef7;--card:#151a21;--line:#202833;--brand:#00c853;--brandh:#00a344;--maxw:980px;--radius:12px}
-    *{box-sizing:border-box}
-    body{margin:0;background:var(--bg);color:var(--ink);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto}
-    a{color:#61dafb}
-    .wrap{max-width:var(--maxw);margin:0 auto;padding:28px 18px}
-    .card{background:var(--card);border:1px solid var(--line);border-radius:var(--radius);padding:20px;margin:16px 0}
-    h1{font-size:28px;margin:12px 0} h2{font-size:22px;margin:12px 0}
-    .btn{display:inline-block;padding:12px 20px;background:var(--brand);border:0;border-radius:10px;color:#03140a;font-weight:700;text-decoration:none}
-    .btn:hover{background:var(--brandh)}
-    nav{display:flex;gap:14px;flex-wrap:wrap;justify-content:center;margin:10px auto 0;padding:8px 12px;max-width:var(--maxw);background:#151a21;border:1px solid #202833;border-radius:10px}
-    details{background:#121821;border:1px solid #202833;border-radius:8px;padding:10px;margin:6px 0}
-    details[open]{background:#131b24}
-    summary{cursor:pointer;font-weight:600}
+    body { font-family: Arial, sans-serif; background: #0f1216; color: #e7eef7; margin: 0; padding: 0; text-align: center; }
+    header { background: #151a21; padding: 20px; border-bottom: 1px solid #202833; }
+    header h1 { margin: 0; font-size: 24px; }
+    nav { margin: 15px 0; }
+    nav a { color: #61dafb; margin: 0 10px; text-decoration: none; font-weight: bold; }
+    nav a:hover { text-decoration: underline; }
+    .lang-switch { display: inline-block; margin-left: 20px; }
+    .chip { padding: 6px 12px; border: 1px solid #202833; border-radius: 6px; cursor: pointer; margin: 0 4px; }
+    .chip.active { background: #1c232f; }
+    .card { background: #151a21; margin: 20px auto; padding: 20px; border-radius: 10px; max-width: 700px; box-shadow: 0 8px 20px rgba(0,0,0,0.3); text-align: left; }
+    h2 { color: #00c853; }
+    .btn { display: inline-block; padding: 12px 20px; margin-top: 15px; background: #00c853; color: #fff; text-decoration: none; border-radius: 6px; font-weight: bold; }
+    .btn:hover { background: #00a344; }
+    footer { margin: 40px 0 20px; color: #a5b5c8; font-size: 14px; }
   </style>
 </head>
 <body>
+
+<header>
+  <h1 id="title">Go_ESIM 🌍 Интернет без роуминга</h1>
   <nav>
-    <a href="#main">Главная</a>
-    <a href="#prague">eSIM Прага / Чехия</a>
-    <a href="#europe">eSIM Европа</a>
-    <a href="#usa">eSIM США</a>
-    <a href="#faq">FAQ</a>
+    <a href="#main" id="nav-home">Главная</a>
+    <a href="#faq" id="nav-faq">FAQ</a>
+    <a href="https://t.me/Go_ESIM" target="_blank" id="nav-tg">Telegram</a>
+    <span class="lang-switch">
+      <span class="chip active" id="btn-ru">RU</span>
+      <span class="chip" id="btn-en">EN</span>
+    </span>
   </nav>
+</header>
 
-  <div class="wrap" id="main">
-    <div class="card">
-      <h1>Go_ESIM 🌍 Интернет без роуминга</h1>
-      <p><strong>eSIM</strong> — это виртуальная SIM-карта, которая устанавливается за 1 минуту и работает в 200+ странах. Без пластика, без поиска салонов связи. QR-код приходит сразу на email.</p>
-      <p><a class="btn" href="https://www.simoptions.com/?utm_medium=wpam_id_866">Купить eSIM (SimOptions)</a></p>
-    </div>
-  </div>
+<section id="main" class="card">
+  <h2 id="h2-what">Что такое eSIM?</h2>
+  <p id="p-what">
+    eSIM — это виртуальная SIM-карта, которая устанавливается за 1 минуту и работает в 200+ странах.
+    Без пластика, без поиска салонов связи. QR-код приходит сразу на email.
+  </p>
+  <a href="https://www.simoptions.com/?utm_medium=wpam_id_866" class="btn" id="btn-buy">Купить eSIM</a>
+</section>
 
-  <!-- Prague -->
-  <div class="wrap" id="prague">
-    <div class="card">
-      <h2>Купить eSIM в Праге и Чехии 🇨🇿</h2>
-      <p>Путешествуете в Чехию и не хотите переплачивать за роуминг? Решение — <strong>eSIM для Праги и всей Чехии</strong>. Установка за 1 минуту, интернет без роуминга, работает на iPhone, Samsung, Pixel.</p>
-      <ul>
-        <li>📲 Без пластика — QR приходит на email</li>
-        <li>⚡ Активация за 1 минуту</li>
-        <li>🌍 Локальные и европейские пакеты</li>
-        <li>✅ Совместимо с iPhone XS+, Galaxy S20+, Pixel 3+, Huawei P40, Mate 40 Pro</li>
-      </ul>
-      <p><a class="btn" href="https://www.simoptions.com/?utm_medium=wpam_id_866">Купить eSIM Чехия</a></p>
-    </div>
-  </div>
+<section class="card">
+  <h2 id="h2-why">Почему именно Go_ESIM?</h2>
+  <ul id="ul-why">
+    <li>✅ Подключение за 1 минуту</li>
+    <li>✅ Работает в 200+ странах</li>
+    <li>✅ Совместимо с iPhone, Samsung, Pixel, Huawei</li>
+    <li>✅ Идеально для туристов и digital nomads</li>
+  </ul>
+  <a href="https://www.simoptions.com/?utm_medium=wpam_id_866" class="btn" id="btn-buy2">Купить eSIM</a>
+</section>
 
-  <!-- Europe -->
-  <div class="wrap" id="europe">
-    <div class="card">
-      <h2>eSIM для Европы 🌍 — интернет без роуминга</h2>
-      <p><strong>eSIM для Европы</strong> покрывает 30+ стран, удобно для туров по нескольким направлениям: Италия, Франция, Германия, Испания, Чехия и др.</p>
-      <ol>
-        <li>Выберите европейский план</li>
-        <li>Оплатите онлайн 💳</li>
-        <li>Получите QR по email и установите</li>
-      </ol>
-      <p><a class="btn" href="https://www.simoptions.com/?utm_medium=wpam_id_866">Купить eSIM Европа</a></p>
-    </div>
-  </div>
+<section id="faq" class="card">
+  <h2>FAQ</h2>
+  <p id="faq1"><b>Как я получу eSIM?</b> — QR-код придёт на email сразу после оплаты.</p>
+  <p id="faq2"><b>Можно ли оставить WhatsApp?</b> — Да, номер WhatsApp не изменится.</p>
+  <p id="faq3"><b>Когда активировать?</b> — В любое время, обычно прямо по прилёту.</p>
+</section>
 
-  <!-- USA -->
-  <div class="wrap" id="usa">
-    <div class="card">
-      <h2>eSIM в США 🇺🇸 — интернет для туристов</h2>
-      <p><strong>eSIM для США</strong> даёт стабильный интернет без дорогого роуминга. Подойдёт для поездок в Нью-Йорк, Лос-Анджелес, Майами и любые штаты.</p>
-      <ul>
-        <li>Поддержка iPhone и Android</li>
-        <li>Гибкие пакеты данных</li>
-        <li>Моментная активация по QR</li>
-      </ul>
-      <p><a class="btn" href="https://www.simoptions.com/?utm_medium=wpam_id_866">Купить eSIM США</a></p>
-    </div>
-  </div>
+<footer>
+  © 2025 Go_ESIM. All rights reserved.
+</footer>
 
-  <!-- FAQ -->
-  <div class="wrap" id="faq">
-    <div class="card">
-      <h2>FAQ — Частые вопросы</h2>
-      <details><summary>Будет ли работать WhatsApp с моим номером?</summary><p>Да. eSIM добавляет только интернет-пакет. Номер WhatsApp остаётся прежним.</p></details>
-      <details><summary>Когда активировать eSIM?</summary><p>Установить можно заранее, а переключить в день поездки — чтобы пакет начал списываться в нужный момент.</p></details>
-      <details><summary>Можно ли использовать вместе с моей физической SIM?</summary><p>Да, современные телефоны поддерживают одновременную работу eSIM и вашей основной SIM.</p></details>
-      <details><summary>Как установить eSIM?</summary><p>После покупки вы получите QR.  
-      <br>📱 iPhone: Настройки → Сотовая связь → Добавить eSIM  
-      <br>📱 Android: Настройки → SIM-карты → Добавить eSIM</p></details>
-    </div>
-  </div>
+<script>
+  const langData = {
+    ru: {
+      title: "Go_ESIM 🌍 Интернет без роуминга",
+      "nav-home": "Главная",
+      "nav-faq": "FAQ",
+      "nav-tg": "Telegram",
+      "h2-what": "Что такое eSIM?",
+      "p-what": "eSIM — это виртуальная SIM-карта, которая устанавливается за 1 минуту и работает в 200+ странах. Без пластика, без поиска салонов связи. QR-код приходит сразу на email.",
+      "btn-buy": "Купить eSIM",
+      "h2-why": "Почему именно Go_ESIM?",
+      "ul-why": "<li>✅ Подключение за 1 минуту</li><li>✅ Работает в 200+ странах</li><li>✅ Совместимо с iPhone, Samsung, Pixel, Huawei</li><li>✅ Идеально для туристов и digital nomads</li>",
+      "btn-buy2": "Купить eSIM",
+      "faq1": "<b>Как я получу eSIM?</b> — QR-код придёт на email сразу после оплаты.",
+      "faq2": "<b>Можно ли оставить WhatsApp?</b> — Да, номер WhatsApp не изменится.",
+      "faq3": "<b>Когда активировать?</b> — В любое время, обычно прямо по прилёту."
+    },
+    en: {
+      title: "Go_ESIM 🌍 Internet Without Roaming",
+      "nav-home": "Home",
+      "nav-faq": "FAQ",
+      "nav-tg": "Telegram",
+      "h2-what": "What is eSIM?",
+      "p-what": "eSIM is a virtual SIM card that installs in 1 minute and works in 200+ countries. No plastic, no store visits. QR code is delivered instantly via email.",
+      "btn-buy": "Buy eSIM",
+      "h2-why": "Why Go_ESIM?",
+      "ul-why": "<li>✅ Instant activation in 1 minute</li><li>✅ Works in 200+ countries</li><li>✅ Compatible with iPhone, Samsung, Pixel, Huawei</li><li>✅ Perfect for travelers & digital nomads</li>",
+      "btn-buy2": "Buy eSIM",
+      "faq1": "<b>How will I receive my eSIM?</b> — You’ll get a QR code instantly by email after payment.",
+      "faq2": "<b>Can I keep my WhatsApp number?</b> — Yes, your WhatsApp number will remain the same.",
+      "faq3": "<b>When should I activate?</b> — Anytime, usually right after landing."
+    }
+  };
 
-  <footer>
-    <div class="wrap">
-      <p>© 2025 Go_ESIM. Все права защищены.</p>
-    </div>
-  </footer>
+  const btnRu = document.getElementById("btn-ru");
+  const btnEn = document.getElementById("btn-en");
+
+  function setLang(lang) {
+    const data = langData[lang];
+    for (let id in data) {
+      const el = document.getElementById(id);
+      if (el) {
+        if (el.tagName === "UL" || el.tagName === "P") {
+          el.innerHTML = data[id];
+        } else {
+          el.textContent = data[id];
+        }
+      }
+    }
+    document.documentElement.lang = lang;
+    btnRu.classList.toggle("active", lang === "ru");
+    btnEn.classList.toggle("active", lang === "en");
+  }
+
+  btnRu.addEventListener("click", () => setLang("ru"));
+  btnEn.addEventListener("click", () => setLang("en"));
+
+  // Автоопределение языка браузера
+  if (navigator.language.toLowerCase().startsWith("en")) {
+    setLang("en");
+  } else {
+    setLang("ru");
+  }
+</script>
+
 </body>
 </html>
